# esl-demo

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  INSTALL.rst  README.rst  documentation_template.md  for_documentation.txt
cmake/: CodeCoverage.cmake  Doxyfile.cmake  ESLDemoBuildOptions.cmake
doc/code_documentation/AC/: basis_ac.F90.md  basis_ac_abc.F90.md  calc_density_matrix.F90.md  create_sparse_pattern.F90.md  density_ac.F90.md  density_matrix.F90.md  hamiltonian_ac.F90.md  mulliken_ac.F90.md
doc/code_documentation/PW/: basis_pw.F90.md  density_pw.F90.md  hamiltonian_pw.F90.md
doc/code_documentation/common/: basis_base.F90.md  constants.F90.md  density_base.F90.md  elsi_fake.F90.md  elsi_wrapper.F90.md  energy.F90.md  esl_dict.F90.md  flook_global.F90.md  flook_if.F90.md  force.F90.md  geometry.F90.md  grid.F90.md  info.F90.md  ion_interaction.F90.md  message.F90.md  mixing.F90.md  mpi_dist.F90.md  mpi_dist_block_cyclic.F90.md  mpi_dist_cyclic.F90.md  numeric.F90.md  potential.F90.md  prec.F90.md  psolver.F90.md  smear.F90.md  species.F90.md  states.F90.md  xc.F90.md
doc/code_documentation/main/: basis.F90.md  density.F90.md  hamiltonian.F90.md  main.F90.md  next_step.F90.md  scf.F90.md  system.F90.md
doc/manual/: Makefile  conf.py  esl-overview.rst  esl-requirements.rst  index.rst
docker/debian/: Dockerfile  build.sh  upload.sh
docker/debian/assets/: modules-esl-openmpi  modules-esl-serial  newsoftware.sh
docker/opensuse/: Dockerfile  build.sh  upload.sh
docker/opensuse/assets/: modules-esl-openmpi  modules-esl-serial  newsoftware.sh
src/: basis.F90  basis_ac.F90  basis_pw.F90  constants.F90  density.F90  density_matrix.F90  elsi_fake.F90  elsi_wrapper.F90  energy.F90  esl-demo.F90  esl_dict.F90  flook_if.F90  force.F90  forces.F90  geometry.F90  grid.F90  hamiltonian.F90  init_sparse_pattern.F90  ion_interaction.F90  main.F90  message.F90  mixing.F90  mpi_dist.F90  mpi_dist_block_cyclic.F90  mpi_dist_cyclic.F90  new_step.F90  next_step.F90  numeric.F90  overlap_matrix.F90  parser.F90  potential.F90  prec.F90  psolver.F90  scf.F90  smear.F90  sparse_matrix.F90  sparse_pattern.F90  species.F90  states.F90  system.F90  (+3 more)
src/AC/: CMakeLists.txt  basis_ac.F90  basis_ac_abc.F90  calc_density_matrix.F90  create_sparse_pattern.F90  density_ac.F90  density_matrix.F90  hamiltonian_ac.F90  mulliken.F90  mulliken_ac.F90  overlap_matrix.F90  sparse_matrix.F90  sparse_pattern.F90
src/PW/: CMakeLists.txt  basis_pw.F90  density_pw.F90  hamiltonian_pw.F90  utils_pw.F90
src/common/: CMakeLists.txt  basis_base.F90  density_base.F90  elsi_fake.F90  elsi_wrapper.F90  energy.F90  esl_dict.F90  flook_global.F90  flook_if.F90  force.F90  geometry.F90  grid.F90  info.F90  ion_interaction.F90  message.F90  mixing.F90  mpi_dist.F90  mpi_dist_block_cyclic.F90  mpi_dist_cyclic.F90  potential.F90  psolver.F90  smear.F90  species.F90  states.F90  xc.F90
src/common/elsi_rci/: elsi_rci_blas.f90  elsi_rci_constants.f90
src/elsi_rci/: CMakeLists.txt  elsi_rci_constants.f90  elsi_rci_datatype.f90  elsi_rci_davidson.f90  elsi_rci_interface.f90  elsi_rci_interface_fake.f90  elsi_rci_omm.f90  elsi_rci_precision.f90  test_rci_omm_driver.f90
src/gridxc_handlers/: CMakeLists.txt  alloc_error_report.F90  alloc_memory_event.F90  die.F90  gridxc_timer_start.F90  gridxc_timer_stop.F90
src/main/: basis.F90  density.F90  hamiltonian.F90  main.F90  next_step.F90  scf.F90  system.F90
tests/: H.UPF  O.UPF  esl-testsuite.yml  test.inp  test_ac.inp  test_ac_H.inp  test_pw.inp
tests/ac/: O.UPF  ac.inp
tests/ac_H/: H.UPF  ac_H.inp
tests/ac_H_Lua/: ac_H_Lua.inp  ac_H_Lua.lua
tests/pw/: pw.inp
tests/pw_H/: pw_H.inp
tests/pw_H_Lua/: pw_H_Lua.inp  pw_H_Lua.lua
utils/: checktest.py  debian-doc.sh  debian-gcc-openmpi-noflook.sh  debian-gcc-openmpi.sh  debian-paranoid.sh  opensuse-docs.sh  opensuse-gcc-openmpi-noflook.sh  opensuse-gcc-openmpi.sh  opensuse-paranoid.sh
