add_library(common
  constants.F90
  elsi_wrapper.F90
  elsi_fake.F90
  energy.F90
  esl_dict.F90
  flook_if.F90
  force.F90
  geometry.F90
  grid.F90
  ion_interaction.F90
  message.F90
  mixing.F90
  numeric.F90
  potential.F90
  prec.F90
  psolver.F90
  smear.F90
  species.F90
  states.F90
  xc.F90  
  )
